--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "sass": "^1.74.1",
     "swiper": "^11.1.1",
     "web-vitals": "^2.1.4"
